<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="main_text">My Nanodegree Apps!</string>
    <string name="button0">POPULAR MOVIES</string>
    <string name="button1">STOCK HAWK</string>
    <string name="button2">BUILD IT BIGGER</string>
    <string name="button3">MAKE YOUR APP MATERIAL</string>
    <string name="button4">GO UBIQUITOUS</string>
    <string name="button5">CAPSTONE</string>
</resources>
