<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.felix.appportfolio.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/main_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_text"
            android:textColor="#2E3D49"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/title_margin_top"/>

        <Button
            android:id="@+id/button_popular_movie"
            style="@style/CustomButtonStyle"
            android:layout_below="@+id/main_view"
            android:text="@string/button0"
            android:onClick="showToastPopularMovie"/>

        <Button
            android:id="@+id/button_stock_hawk"
            style="@style/CustomButtonStyle"
            android:layout_below="@+id/button_popular_movie"
            android:text="@string/button1"
            android:onClick="showToastStockHawk"/>

        <Button
            android:id="@+id/button_build_it_bigger"
            style="@style/CustomButtonStyle"
            android:layout_below="@+id/button_stock_hawk"
            android:text="@string/button2"
            android:onClick="showToastBuildBigger"/>

        <Button
            android:id="@+id/button_make_material"
            style="@style/CustomButtonStyle"
            android:layout_below="@+id/button_build_it_bigger"
            android:text="@string/button3"
            android:onClick="showToastMakeMaterial"/>

        <Button
            android:id="@+id/button_go_ubiquitous"
            style="@style/CustomButtonStyle"
            android:layout_below="@+id/button_make_material"
            android:text="@string/button4"
            android:onClick="showToastGoUbiquitous"/>

        <Button
            android:id="@+id/button_capstone"
            style="@style/CustomButtonStyle"
            android:layout_below="@+id/button_go_ubiquitous"
            android:text="@string/button5"
            android:onClick="showToastCapstone"/>
    </RelativeLayout>

</ScrollView>
